--- a/bin-debug/index.html
+++ b/bin-debug/index.html
@@ -13,6 +13,7 @@
 
         <script src="./../src/entity/Entity.js"></script>
 
+        <script src="./../src/entity/Glitter.js"></script>
         <script src="./../src/entity/fairies/Fairy.js"></script>
         <script src="./../src/entity/fairies/Sol.js"></script> <!--Egen -->
         <script src="./../src/entity/fairies/Filippa.js"></script>
