--- a/bin-debug/index.html
+++ b/bin-debug/index.html
@@ -18,6 +18,10 @@
         <script src="./../src/entity/fairies/Sol.js"></script> <!--Egen -->
         <script src="./../src/entity/fairies/Filippa.js"></script>
 
+        <script src="./../src/entity/LightBall.js"></script>
+        <script src="./../src/entity/Weed.js"></script>
+
+
         <script src="./../src/entity/Waterdropplet.js"></script>
         <script src="./../src/entity/Emitter.js"></script>
         
