--- a/bin-debug/index.html
+++ b/bin-debug/index.html
@@ -18,7 +18,9 @@
         <script src="./../src/entity/fairies/Filippa.js"></script>
 
         <script src="./../src/entity/Waterdropplet.js"></script>
+        <script src="./../src/entity/Thorn.js"></script>
         <script src="./../src/entity/Emitter.js"></script>
+        <script src="./../src/entity/Flower.js"></script>
         
         <script src="./../src/scene/game/Game.js"></script>
         <script src="./../src/system/Main.js"></script>
