--- a/bin-debug/index.html
+++ b/bin-debug/index.html
@@ -31,6 +31,7 @@
         <script src="./../src/entity/Flower.js"></script>
         
         <script src="./../src/scene/game/Game.js"></script>
+        <script src="./../src/scene/game/GameOver.js"></script>
         <script src="./../src/system/Main.js"></script>
         <script src="./../src/scope/Alias.js"></script>
         
