--- a/bin-debug/index.html
+++ b/bin-debug/index.html
@@ -30,6 +30,9 @@
         <script src="./../src/entity/powerups/Waterdroplet.js"></script>
         <script src="./../src/entity/enemies/Thorn.js"></script>
         <script src="./../src/entity/Flower.js"></script>
+        <script src="./../src/entity/Watercan.js"></script>
+
+
         <script src="./../src/scene/game/GameOver.js"></script>
         <script src="./../src/scene/game/Game.js"></script>
         
