--- a/bin-debug/index.html
+++ b/bin-debug/index.html
@@ -33,6 +33,9 @@
         <script src="./../src/entity/Watercan.js"></script>
 
 
+        <script src="./../src/scene/game/Start.js"></script>
+        <script src="./../src/scene/game/Credits.js"></script>
+        <script src="./../src/scene/game/Controls.js"></script>
         <script src="./../src/scene/game/GameOver.js"></script>
         <script src="./../src/scene/game/Game.js"></script>
         
