--- a/bin-debug/index.html
+++ b/bin-debug/index.html
@@ -25,6 +25,7 @@
         
         <script src="./../src/entity/LightBall.js"></script>
         <script src="./../src/entity/enemies/Weed.js"></script>
+        <script src="./../src/entity/enemies/BossWeed.js"></script>
         <script src="./../src/entity/enemies/Mushroom.js"></script>
  
         <script src="./../src/entity/powerups/Waterdroplet.js"></script>
