--- a/bin-debug/index.html
+++ b/bin-debug/index.html
@@ -34,6 +34,7 @@
 
 
         <script src="./../src/scene/game/Start.js"></script>
+        <script src="./../src/scene/game/ChoosePlayer.js"></script>
         <script src="./../src/scene/game/Credits.js"></script>
         <script src="./../src/scene/game/Controls.js"></script>
         <script src="./../src/scene/game/GameOver.js"></script>
