Här kommer guds son

--- a/bin-debug/index.html
+++ b/bin-debug/index.html
@@ -29,6 +29,8 @@
         <script src="./../src/entity/enemies/Mushroom.js"></script>
  
         <script src="./../src/entity/powerups/Waterdroplet.js"></script>
+        <script src="./../src/entity/powerups/Powerup.js"></script>
+        <script src="./../src/entity/powerups/Jesus.js"></script>
         <script src="./../src/entity/enemies/Thorn.js"></script>
         <script src="./../src/entity/Flower.js"></script>
         <script src="./../src/entity/Watercan.js"></script>
