--- a/bin-debug/index.html
+++ b/bin-debug/index.html
@@ -34,6 +34,7 @@
         <script src="./../src/entity/enemies/Thorn.js"></script>
         <script src="./../src/entity/Flower.js"></script>
         <script src="./../src/entity/Watercan.js"></script>
+        <script src="./../src/entity/Controll.js"></script>
 
 
         <script src="./../src/scene/game/Start.js"></script>
