--- a/bin-debug/index.html
+++ b/bin-debug/index.html
@@ -42,6 +42,7 @@
         <script src="./../src/scene/game/Credits.js"></script>
         <script src="./../src/scene/game/Controls.js"></script>
         <script src="./../src/scene/game/GameOver.js"></script>
+        <script src="./../src/scene/game/GameOnePlayer.js"></script>
         <script src="./../src/scene/game/Game.js"></script>
         
         <script src="./../src/system/Main.js"></script>
