--- a/bin-debug/index.html
+++ b/bin-debug/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>projektkurs2 - DEBUG</title>
+        <title>pixiepower - DEBUG</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         
         <!-- SOFTWARE DEVELOPMENT KIT -->
@@ -51,7 +51,7 @@
         <!-- BOOTSTRAP -->
         <script>
             window.onload = function() {
-                projektkurs2.bootstrap();
+                pixiepower.bootstrap();
             };
         </script>
     </head>
