--- a/bin/index.html
+++ b/bin/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>projektkurs2</title>
+        <title>pixiepower</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         
         <!-- APPLICATION BUNDLE -->
-        <script src="../dist/projektkurs2.js"></script>
+        <script src="../dist/pixiepower.js"></script>
         
         <!-- BOOTSTRAP -->
         <script>
             window.onload = function() {
-                projektkurs2.bootstrap();
+                pixiepower.bootstrap();
             };
         </script>
     </head>
